--- a/playbooks/vmware/vmware_reconfigure_vm_new.yml
+++ b/playbooks/vmware/vmware_reconfigure_vm_new.yml
@@ -10,6 +10,19 @@
    cpu: "1"
 
   tasks:
+  - name: Stop virtual machine
+    vmware_guest:
+      hostname: "{{ vcenter_hostname }}"
+      username: "{{ vcenter_username }}"
+      password: "{{ vcenter_password }}"
+      validate_certs: "false"
+      name: "{{ guest_name }}"
+      state: "poweredoff"
+    delegate_to: "localhost"
+    register: stop_vm
+
+
+
   - name: reconfigure CPU and RAM of VM
     vmware_guest:
       hostname: "{{ vcenter_hostname }}"
