--- a/playbooks/vmware/vmware_reconfigure_vm_new.yml
+++ b/playbooks/vmware/vmware_reconfigure_vm_new.yml
@@ -32,6 +32,6 @@
       state: "poweredon"
       validate_certs: "false"
       hardware:
-        memory_mb: "{{ memory }}"
-        num_cpus: "{{ cpu }}"
+        memory_mb: 1024
+        num_cpus: 1
     delegate_to: "localhost"
