--- a/playbooks/create_vm_from_template/create_vm_from_template_1.yml
+++ b/playbooks/create_vm_from_template/create_vm_from_template_1.yml
@@ -1,20 +1,27 @@
 ---
-- name: Clone VM
-  hosts: localhost 
-  gather_facts: false
-  tasks: 
-  - name: Clone VM from template
-    local_action:
-      module: vmware_guest
-      hostname: "{{ vcenter_hostname }}"
-      username: "{{ username }}"
-      password: "{{ password }}"
-      validate_certs: no      
-      folder: "{{ folder }}"
-      template: "{{ vmtemplate }}"
-      name: "{{ item }}"
-      cluster: "{{ vmcluster }}"
-      datacenter: "{{ datacenter }}"
-      state: poweredon
-      customization_spec: "{{ customization_spec }}"
+- hosts: localhost
+  gather_facts: no
+  vars:
+    vcenter_server: vcsa67.rtp.raleigh.ibm.com
+    vcenter_user: "administrator@vsphere.local"
+    vcenter_pass: Termin8t3r!!
+    datacenter: "dc01"
+    cluster: "cluster01"
+  tasks:
+    - name: Clone the template
+      vmware_guest:
+        hostname: "{{ vcenter_server }}"
+        username: "{{ vcenter_user }}"
+        password: "{{ vcenter_pass }}"
+        template: "centos7-cf-template"
+        validate_certs: False
+        name: "automagic"
+        datacenter: "{{ datacenter }}"
+        cluster: "{{ cluster }}"
+        folder: "/{{ datacenter }}/vm/webb-cloudforms"
+        datastore: "dc01-ds01"
+        state: poweredon
+        wait_for_ip_address: yes
+      delegate_to: localhost
+ 
     
