--- a/playbooks/create_vm_from_template/add_vmwaredisk.yml
+++ b/playbooks/create_vm_from_template/add_vmwaredisk.yml
@@ -2,6 +2,8 @@
 
 - name: create and add new disk(s) to vmware vm
   hosts: localhost
+  strategy: debug
+  gather_facts: yes
   vars:
     vcentre: vcsa67.rtp.raleigh.ibm.com
     username: "administrator@vsphere.local"
