--- a/playbooks/create_vm_from_template/adddisk-to-vmware.yml
+++ b/playbooks/create_vm_from_template/adddisk-to-vmware.yml
@@ -23,7 +23,7 @@
       name: "{{ vmname }}"
     delegate_to: localhost
     register: vm_disk_info
-    
+ 
 #  - name: Set empty list to store varialbe
 #    set_fact:
 #      all_scsi_number_list: []  # A list to store all scsi device number
@@ -130,7 +130,7 @@
       datacenter: "{{ datacenter }}"
       name: "{{ vmname }}"
       disk:
-        - size_gb: 2
+        - size_gb: {{ disksize | int }}
           type: thin
           state: present
           datastore: "{{ datastore }}"
@@ -140,6 +140,3 @@
           scsi_type: 'paravirtual'
     delegate_to: localhost
     register: add_disk
-
-  - debug:
-      msg: add_disk.output
