--- a/playbooks/create_vm_from_template/adddisk-to-vmware.yml
+++ b/playbooks/create_vm_from_template/adddisk-to-vmware.yml
@@ -131,7 +131,7 @@
       datacenter: "{{ datacenter }}"
       name: "{{ vmname }}"
       disk:
-        - size_gb: {{ disksize | int }}
+        - size_gb: {{ disksize }}
           type: thin
           state: present
           datastore: "{{ datastore }}"
