--- a/playbooks/create_vm_from_template/adddisk-to-vmware.yml
+++ b/playbooks/create_vm_from_template/adddisk-to-vmware.yml
@@ -12,6 +12,7 @@
     cluster: "cluster01"
     datastore: "dc01-ds01"
     ansible_ssh_pass: Passw0rd
+    become_user: root
 
   tasks:
   - name: get VM info
