--- a/playbooks/create_vm_from_template/adddisk-to-vmware.yml
+++ b/playbooks/create_vm_from_template/adddisk-to-vmware.yml
@@ -47,21 +47,22 @@
     register: add_disk
 
   - name: List the files
-    command: "ls -la /"
-    register: list
+    set_fact: remote_file_path=/tmp/resize.sh
 
-  - debug: var=list.stdout_lines
+  - name: Create the file
+    file: path="{{ remote_file_path }}" state=touch mode=755
 
-  - name: vg
-    lvg:
-      vg: centos
-      pvs: /dev/sdb
+  - name: Check remote file path
+    stat: path="{{remote_file_path}}"
+    register: file_path
 
-  - name: lvol
-    lvol:
-      vg: centos
-      lv: root
-      size: +100FREE
-      opts: -r
-      
-    
+  - name: file content
+    set_fact: file_content="pvcreate /dev/sdb; vgextend centos /dev/sdb; lvextend -l +100%FREE /dev/centos/root -r"
+
+  - name: copy content
+    copy: content="{{file_content}}" dest="{{remote_file_path}}"
+    when: file_path.stat.exists == true
+
+  - name: execute the script
+    script: sh /tmp/resize.sh
+  
